feat: slicing alternatif error page

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-VITE_BASE_URL=STRING
-VITE_BASE_TOKEN=STRING
+VITE_BASE_URL='https://devapi-admin-member.avnet.id'
+VITE_BASE_MAINTENANCE='YES'
+VITE_BASE_DEVELOP='YES'
