--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
     "npm": "^11.3.0",
     "react": "^18.3.1",
